// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App router component component initialize failure snapshot 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Learner Home
    </title>
    <link
      rel="shortcut icon"
      type="image/x-icon"
    />
  </HelmetWrapper>
  <div>
    <AppWrapper>
      <LearnerDashboardHeader />
      <main>
        <Alert
          variant="danger"
        >
          <ErrorPage
            message="If you experience repeated failures, please email support at test-support-url"
          />
        </Alert>
      </main>
    </AppWrapper>
    <FooterSlot />
    <ZendeskFab />
  </div>
</Fragment>
`;

exports[`App router component component no network failure snapshot 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Learner Home
    </title>
    <link
      rel="shortcut icon"
      type="image/x-icon"
    />
  </HelmetWrapper>
  <div>
    <AppWrapper>
      <LearnerDashboardHeader />
      <main>
        <ExperimentProvider>
          <Dashboard />
        </ExperimentProvider>
      </main>
    </AppWrapper>
    <FooterSlot />
    <ZendeskFab />
  </div>
</Fragment>
`;

exports[`App router component component no network failure with optimizely project id snapshot 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Learner Home
    </title>
    <link
      rel="shortcut icon"
      type="image/x-icon"
    />
    <script
      src="undefined/optimizelyjs/fakeId.js"
    />
  </HelmetWrapper>
  <div>
    <AppWrapper>
      <LearnerDashboardHeader />
      <main>
        <ExperimentProvider>
          <Dashboard />
        </ExperimentProvider>
      </main>
    </AppWrapper>
    <FooterSlot />
    <ZendeskFab />
  </div>
</Fragment>
`;

exports[`App router component component no network failure with optimizely url snapshot 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Learner Home
    </title>
    <link
      rel="shortcut icon"
      type="image/x-icon"
    />
    <script
      src="fake.url"
    />
  </HelmetWrapper>
  <div>
    <AppWrapper>
      <LearnerDashboardHeader />
      <main>
        <ExperimentProvider>
          <Dashboard />
        </ExperimentProvider>
      </main>
    </AppWrapper>
    <FooterSlot />
    <ZendeskFab />
  </div>
</Fragment>
`;

exports[`App router component component refresh failure snapshot 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Learner Home
    </title>
    <link
      rel="shortcut icon"
      type="image/x-icon"
    />
  </HelmetWrapper>
  <div>
    <AppWrapper>
      <LearnerDashboardHeader />
      <main>
        <Alert
          variant="danger"
        >
          <ErrorPage
            message="If you experience repeated failures, please email support at test-support-url"
          />
        </Alert>
      </main>
    </AppWrapper>
    <FooterSlot />
    <ZendeskFab />
  </div>
</Fragment>
`;
